kubernetes/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  selector:
    matchLabels:
      app: webserver
  replicas: 1
  template:
    metadata:
      labels:
        app: webserver
    spec:
      securityContext:
        fsGroup: 2000
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - name: web
            containerPort: 80
        volumeMounts:
          - name: local
            mountPath: /usr/share/nginx/html
      volumes:
      - name: local
        persistentVolumeClaim:
          claimName: nfs
