kubernetes/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
spec:
  selector:
    app: webserver
  ports:
    - name: web
      port: 80
      targetPort: websecure
  type: LoadBalancer
