kubernetes/nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
spec:
  rules:
  - host: "test.sugjo.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver-service
            port:
              name: websecure
  tls:
  - hosts:
      - test.sugjo.dev
    secretName: sugjodev
